info section spacing fixed

--- a/src/styles/EditProfile/profilePage.module.scss
+++ b/src/styles/EditProfile/profilePage.module.scss
@@ -14,6 +14,7 @@
       align-items: center;
       gap: 2rem;
       width: 100%;
+      padding: 0.5rem 0;
       .firstItem {
         flex: 0.5;
       }
@@ -24,6 +25,7 @@
     .singleItemArea {
       display: flex;
       width: 100%;
+      padding: 0.5rem 0;
     }
     .stateNameArea {
       width: 100%;
